set (LIB Ldd_Ldd Ldd_Tvpi Cudd_Cudd Cudd_St Cudd_Mtr Cudd_Epd Cudd_Util 
  ${GMP_LIB} m)
add_executable (test1 test1.c)
target_link_libraries (test1 ${LIB})
add_executable (test1b test1b.c)
target_link_libraries (test1b ${LIB})
add_executable (test2 test2.c)
target_link_libraries (test2 ${LIB})
add_executable (test3 test3.c)
target_link_libraries (test3 ${LIB})
add_executable (test_box_widen test_box_widen.c)
target_link_libraries (test_box_widen ${LIB})
add_executable (test_term_replace test_term_replace.c)
target_link_libraries (test_term_replace ${LIB})
add_executable (cuddDvoMtrBug cuddDvoMtrBug.c)
target_link_libraries (cuddDvoMtrBug ${LIB})
add_executable (cuddMtrBug cuddMtrBug.c)
target_link_libraries (cuddMtrBug ${LIB})

